--- a/style.css
+++ b/style.css
@@ -1,43 +1,66 @@
 body{
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .name-highlight{
-    color: red;
-    font-weight: bolder;
+    color: palevioletred;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, palevioletred, pink);
+    border-radius: 5px;
+    padding: 10px 20px;
+    color: white;
+    font-weight: 700;
 }
 .half-width{
     width: 40%;
     float: left;
-    margin-left: 5px;
-    padding-left: 2px;
+    margin-left: 5%;
+    padding-left: 2%;
 }
 .half-width img{
     width: 100%;
-}
-.link-button{
-    text-decoration: none;
-    background-image: linear-gradient(45deg, red, tomato);
-    padding: 10px, 20px;
-    border-radius: 5px;
-    font-weight: 700;
-    color: white;
 }
 .top-banner{
     background-image: url("Images/personal-website/header-bg.png");
     background-repeat: no-repeat;
 }
 section{
-    height: 500px;
+    height: 600px;
     padding-bottom: 150px;
 }
-.link-button{
+.bio-bg{
     background-image: url("Images/personal-website/biography-bg.png");
     background-repeat: no-repeat;
 }
-.width{
-    width: 30%;
+.text-align{
+    text-align: center;
+}
+.column{
     float: left;
-    margin-left: 2px;
-    padding-left: 2px;
+    width: 32%;
+    padding: 8px;
+}
+.latest-work-banner{
+    background-image: url("Images/personal-website/latest-work-bg.png");
+    background-repeat: no-repeat;
+}
+.about-me{
+    text-align: center;
+}
+.message-box{
+    background-image: linear-gradient(45deg, palevioletred, pink);
+    text-align: center;
+    background-position: center center;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.last-bg{
+    background-image: url("Images/personal-website/footer-bg.png");
+    background-repeat: no-repeat;
+}
+footer{
+    text-align: center;
 }
